fix: button label color not correct on mobile devices

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -44,6 +44,7 @@ button {
 a,
 button {
   -webkit-tap-highlight-color: transparent;
+  color: #000;
 }
 
 picture,
